test/data/resolver/valid/inline_endpoint_target.cypher
MATCH (p:Person)-[r:AUTHORED]->(:Post) RETURN p, r
