test/data/resolver/invalid/undirected_edge.cypher
MATCH (p:Person)-[r:AUTHORED]-(q:Post) RETURN r
